# mesh_prop

./: ACKNOWLEDGMENTS.md  CODE_PROVENANCE.md  OPTIMIZATION_ROADMAP.md  README.md  VERIFICATION_TOOLS.md  benchmark_comparison.py  benchmark_performance.py  example_grid_proportions.py  examples.py  pyproject.toml
mesh_prop/: __init__.py  accelerators.py  block_proportion.py  bvh.py  grid_detection.py  grid_proportion.py  mesh.py  point_selection.py
tests/: test_accelerators.py  test_block_proportion.py  test_bvh.py  test_grid_detection.py  test_grid_proportion.py  test_mesh.py  test_point_selection.py
tools/: verify_code_originality.sh
